# MEPinterp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  test.txt
config/: inp_params_3q  input.cfg
config/FeMn_TB/delta0.900/: FeMn_d0.9.latt  ahcVELO_sol09.npy  ahc_tens.npy
config/FeMn_TB/delta1.000/: FeMn_d1.0.latt  ahcVELO_sol10.npy  ahc_tens.npy
config/FeMn_TB/delta1.100/: FeMn_d1.1.latt  ahcVELO_sol11.npy  ahc_tens.npy
config/Rashba/: input.cfg  photoC_2nd.npy  rashba.cfg
scripts/: FeMn_3q_model.py  FeMn_WX_rashba.py  FeMn_WX_setup.py  FeMn_latt_OPT.py  clean_build.sh  do_band_calc.py  do_bands_vs_distort.py  do_bands_vs_rashba.py  fortran_io.py  get_interp_lst.py  inpgenTBwann.py  kptsgen.pl  mep_optimizer.py  mep_worker.py  plot_aHall_vs_hw.py  plot_ahc_vs_hw.py  plot_bandStruct.py  plot_delta_hw.py  plot_gyro.py  plot_k_conv.py  plot_photoC_vs_broad.py  plot_photoC_vs_fermi.py  plot_photoC_vs_hw.py  plot_photoC_vs_laserPolDir.py  plot_photoCond_vs_wildcard.py  plot_photoCurr_vs_wildcard.py  plot_probe_hw.py  plot_probe_phi.py  plot_rashba_bands.py  plot_scnd_photo.py  postw90_in_writer.py  probe_hw.py  probe_phi.py  read_f90.py  setup_k_conv.py  souza_tb_model.py  souza_tb_model_1D.py  souza_tb_model_2D.py  souza_tb_model_2Dsquare.py  souza_tb_model_NEW.py  (+1 more)
scripts/FeMn_TB/: FeMn_WX_rashba.py  FeMn_get_spin_config.py  plot_jan_bands.py
scripts/Rashba/: plot_photoC_vs_broad_frankStyle.py  plot_photoC_vs_broad_frankStyle_KELDYSH.py  plot_photoC_vs_broad_frankStyle_NAGAOSA.py
scripts/deprecated/: mep_optimizer.py
scripts/souzaTB/: plot_probe_phi.py
src/: 3q_state_wrapper.f90  CMakeLists.txt  band_calc.f90  bcd_photo.f90  berry.f90  constants.f90  core.f90  file_io.f90  green_en_int.f90  gyro.f90  input_paras.f90  k_space.f90  keldysh.f90  kubo.f90  kubo_ahc.f90  kubo_mep.f90  main.f90  matrix_math.f90  mep_niu.f90  mep_niu2014.f90  model_hams.f90  mpi_comm.f90  parameters.f90  photo.f90  ree.f90  setham_FeMn_3qstate.F  statistics.f90  w90_interface.f90  wann_interp.f90  wrapper_3q.f90
src/mepInterp/: file_io.f90  main.f90  matrix_math.f90  mep_niu.f90  parameters.f90  wann_interp.f90
src/tests/: test_MEPinterp.f90  test_file_io.f90  test_log.f90  test_matrix_math.f90
tests/: CMakeLists.txt  helpers.f90  main.f90  test  test_FeMn_AHE.f90  test_GaAs_shiftC.f90  test_MEPinterp.f90  test_crossp.f90  test_file_io.f90  test_kSpace.f90  test_log.f90  test_matrix_math.f90  test_rashba_photoC.f90
